--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aptos-labs/wallet-adapter-ant-design": "^2.0.0",
+    "@aptos-labs/wallet-adapter-core": "^3.3.0",
+    "@aptos-labs/wallet-adapter-react": "^2.1.5",
     "@metaplex-foundation/js": "^0.20.0",
     "@solana/web3.js": "^1.72.0",
     "@testing-library/jest-dom": "^5.16.5",
