--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@aptos-labs/wallet-adapter-core": "^3.3.0",
     "@aptos-labs/wallet-adapter-react": "^2.1.5",
     "@aptoslink/api": "^0.0.1",
+    "@evmlink/api": "^0.0.5",
     "@metaplex-foundation/js": "^0.20.0",
     "@solana/web3.js": "^1.72.0",
     "@testing-library/jest-dom": "^5.16.5",
